@@ -199,6 +199,8 @@ production.
   log entry is not implemented yet.
 * list=tags has additional properties to indicate 'active' status and tag
   sources.
+* prop=revision output in enum mode is now sorted by timestamp rather than
+  revision ID. This usually won't make any difference.
 
 === Action API internal changes in 1.25 ===
 * ApiHelp has been rewritten to support i18n and paginated HTML output.
